tests/sksl/errors/RedeclareEnum.dsl.glsl
### Compilation failed:

error: expected a type, but found 'enum'
1 error
